# repostat

./: .gitignore  pyproject.toml
src/repostat/: __init__.py  cli.py  decorators.py  exceptions.py  github.py  main.py
tests/: test_github.py
