[project]
name = "repostat"
version = "0.1.0"
description = "Github repository analyzer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "monkeypatch>=0.1rc3",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
repostat = "repostat.cli:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]
